@@ -1,2 +1,4 @@
-require 'recaptcha'
+# Rails plugin initialization.
+# You can also install it as a gem:
+#   config.gem "ambethia-recaptcha", :lib => "recaptcha/rails", :source => "http://gems.github.com"
 require 'recaptcha/rails'
